--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.0.0",
+    "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "exceljs": "^4.4.0",
-    "lucide-react": "^0.263.1"
+    "lucide-react": "^0.300.0"
   }
 }
