--- a/package.json
+++ b/package.json
@@ -14,5 +14,14 @@
     "react-dom": "^18.2.0",
     "exceljs": "^4.4.0",
     "lucide-react": "^0.300.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/node": "^20.0.0",
+    "autoprefixer": "^10.0.0",
+    "postcss": "^8.0.0",
+    "tailwindcss": "^3.3.0"
   }
 }
