--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "next": "14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.3.5",
+    "react-dom": "18.3.5",
     "exceljs": "^4.4.0",
     "lucide-react": "^0.300.0"
   },
