--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "@types/node": "^20.0.0",
     "autoprefixer": "10.4.20",
     "postcss": "^8.0.0",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "3.3.0"
   }
 }
