--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
+    "exceljs": "^4.4.0",
+    "lucide-react": "^0.300.0",
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "exceljs": "^4.4.0",
-    "lucide-react": "^0.300.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
+    "@types/node": "^20.0.0",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
-    "@types/node": "^20.0.0",
     "autoprefixer": "10.4.20",
     "postcss": "^8.0.0",
-    "tailwindcss": "3.3.0"
+    "tailwindcss": "3.3.0",
+    "typescript": "^5.0.0"
   }
 }
