--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "10.4.20",
     "postcss": "^8.0.0",
     "tailwindcss": "3.3.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "axios": "^1.5.0"
   }
 }
