--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss": "^8.0.0",
     "tailwindcss": "3.3.0",
     "typescript": "^5.0.0",
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "xml2js": "^0.4.23"
   }
 }
