--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lucide-react": "^0.300.0",
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "axios": "^1.5.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
@@ -23,8 +25,6 @@
     "autoprefixer": "10.4.20",
     "postcss": "^8.0.0",
     "tailwindcss": "3.3.0",
-    "typescript": "^5.0.0",
-    "axios": "^1.5.0",
-    "xml2js": "^0.4.23"
+    "typescript": "^5.0.0"
   }
 }
