--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,10 @@
         "name": "next"
       }
     ],
-    "typeRoots": ["./node_modules/@types", "./types"],
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts",  "types/**/*.d.ts"],
   "exclude": ["node_modules"]
