--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "axios": "^1.5.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
