--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "axios": "^1.5.0",
-    "xml2js": "^0.4.23"
+    "fast-xml-parser": "^4.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
