--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "axios": "^1.5.0",
-    "fast-xml-parser": "^4.3.0"
+    "fast-xml-parser": "^4.3.0",
+    "cheerio": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
