--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "18.2.0",
     "axios": "^1.5.0",
     "fast-xml-parser": "^4.3.0",
-    "cheerio": "^1.0.0"
+    "cheerio": "1.0.0-rc.12"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
