--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "axios": "^1.5.0",
     "fast-xml-parser": "^4.3.0",
+    "@supabase/supabase-js": "^2.1.0",
     "cheerio": "1.0.0-rc.12"
   },
   "devDependencies": {
